# GxScript

./: CMakeLists.txt  README-zh.md  README.md
gx-script/: CMakeLists.txt
gx-script/include/gx/: reg_script.h
gx-script/src/: reg_script.cpp
gx-script/src/lua/: gany_class_to_lua.cpp  gany_class_to_lua.h  gany_lua_vm.cpp  gany_lua_vm.h  gany_to_lua.cpp  gany_to_lua.h  lua_function.cpp  lua_function.h  lua_table.cpp  lua_table.h
test/: CMakeLists.txt
test/src/: test_main.cpp  test_script.cpp
tools/luac/: CMakeLists.txt
tools/luac/src/: luac.cpp
